# sysY-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  action.c  action.h  ast.c  ast.h  ast_query.c  main.c  main.cc  output.rv  output_sample.s  query.l  query.y  sym.c  sym.h  sysY.h  sysY.l  sysY.y  temp.txt  token.c  token.h
.github/workflows/: c-cpp.yml  cats.yml  gen-parser.yml  greetings.yml  mirror.yml
codegen/: const_inflater.cc  generator.cc  riscvinstr.cc  stack_rv_generator.cc  stack_translator.cc
fronted/parser/: query.l  sysY.l
frontend/: ast.c  ast.cc  ast_query.c  ast_query.cc  token.c
frontend/parser/: action.cc  query.l  query.lex.cc  query.tab.c  query.tab.cc  query.tab.h  query.tab.hh  query.y  query_action.cc  sysY.l  sysY.lex.cc  (+5 more)
include/: Element.h  Query.h  Triples.h  action.h  arm_triple_gnerator.h  ast.h  cfg.h  chillet  element.h  exp_sim.h  flag.h  pass.h  query.h  sir.hpp  sysY.h  sytype.h  token.h  triples.h  utils.h
optimizer/: cfg.cc  exp_sim.c  exp_sim.cc  init_list_flatten.c  init_list_flatten.cc
package/: Element.cc  Element.h  Element.hpp  Query.cc  Query.h  Triple.cc  Triple.h  Triples.cc  Triples.h  arm_triple_generator_assign.cc  arm_triple_generator_make.cc  arm_triple_gnerator.cc  arm_triple_gnerator.cpp  element.cc  query.cc  triples.cc  triples_block.cc  truples_make.cc
pass/: array_decl.c  const_fold.c  const_fold.cc  sytype_linter.cc
src/: main.cc
test/: fixture.py  hello.out  hello_and_apb.sysy  parser  run_wrapper.sh  test2.sysy  test3.sysy  test4.sysy  testfile.sysy  testfile.txt
utils/: flag.cc  utils.cc
(+34 files in other folders)
